<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/icon_aboutpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aboutAppText"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/contentDescription"
        android:src="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/aboutAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50sp"
        android:layout_marginBottom="20sp"
        android:text="@string/aboutApp"
        android:textAlignment="center" />

    <TextView

        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAppText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/githubrepoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/github_repo" />

    <TextView
        android:id="@+id/telegramTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/githubrepoTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/telegram" />

</RelativeLayout>