<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--layout for final mark-->
    <EditText
        android:id="@+id/currentMarkFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/examMarkFM"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/currentMarkString"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/examMarkFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/examMarkString"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <Button
        android:id="@+id/fmbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finalMarkTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/countString" />

    <TextView
        android:id="@+id/finalMarkTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/examMarkFM"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />
</RelativeLayout>